--- a/Exercises/EN/Basic/09_Functions_Fundamentals.ipynb
+++ b/Exercises/EN/Basic/09_Functions_Fundamentals.ipynb
@@ -110,14 +110,25 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    }
+   ],
    "source": [
     "list_1 = [2, 45,62, -21, 0, 55, 3]\n",
     "\n",
     "#Start your code here:\n",
     "#First, initialization of the variable length \n",
-    "\n",
-    "#Second, loop through list_1 and increment your variable length"
+    "length = 0\n",
+    "#Second, loop through list_1 and increment your variable length\n",
+    "for elem in list_1:\n",
+    "    length += 1\n",
+    "print(length)"
    ]
   },
   {
@@ -219,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,11 +333,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "144 400\n"
+     ]
+    }
+   ],
    "source": [
-    "# Start your code below:\n"
+    "# Start your code below:\n",
+    "squared_12 = square(12)\n",
+    "squared_20 = square(20)\n",
+    "print(squared_12, squared_20)"
    ]
   },
   {
@@ -401,9 +423,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['4+', '4+', '4+', '12+', '4+', '4+', '4+', '12+', '4+', '4+']\n"
+     ]
+    }
+   ],
    "source": [
     "#Import data set\n",
     "opened_file = open('AppleStore.csv', encoding='utf8')\n",
@@ -417,11 +447,13 @@
     "#Loop through the apps_data data set (excluding the header row)\n",
     "for row in apps_data[1:]:\n",
     "    #for each iteration, we first store the value from the column we want in a variable\n",
-    "    content_rating = row[10] #(rating has the index number of 10 in each list)\n",
+    "    content_rating = row[11] #(rating has the index number of 10 in each list)\n",
     "    \n",
     "    #then we append that value we just stored to the empty list we have \n",
     "    #created outside the for loop (content_ratings)\n",
-    "    content_ratings.append(content_rating)"
+    "    content_ratings.append(content_rating)\n",
+    "\n",
+    "print(content_ratings[:10])"
    ]
   },
   {
@@ -441,12 +473,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['4+', '4+', '4+', '12+', '4+']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Start your code below:\n",
+    "\n",
+    "def extract(column_index, data_set):\n",
+    "    column_content = []\n",
+    "    for row in data_set[1:]:\n",
+    "        column_content.append(row[column_index])\n",
+    "    return column_content\n",
+    "\n",
+    "\n",
+    "app_rating = extract(11, apps_data)\n",
+    "print(app_rating[:5])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Start your code below:"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -459,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +525,7 @@
        "{'4+': 3, '9+': 2, '12+': 1, '17+': 1}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,11 +567,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'4+': 4433, '12+': 1155, '17+': 622, '9+': 987}\n",
+      "[('4+', 4433), ('9+', 987), ('12+', 1155), ('17+', 622)]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Start your code below:\n"
+    "# Start your code below:\n",
+    "def freq_table(data_in):\n",
+    "    tab = {}\n",
+    "    for i in data_in:\n",
+    "        if i in tab:\n",
+    "            tab[i] += 1\n",
+    "        else:\n",
+    "            tab[i] = 1\n",
+    "    return tab\n",
+    "\n",
+    "rating_ft = freq_table(app_rating)\n",
+    "print(rating_ft)\n",
+    "print(sorted(rating_ft.items(), key = lambda x:int(x[0][:-1])))"
    ]
   },
   {
@@ -661,7 +739,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Start your code below:\n"
+    "# Start your code below:\n",
+    "def add(x, y):\n",
+    "    return x + y\n",
+    "\n",
+    "add(5)"
    ]
   },
   {
@@ -981,7 +1063,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
