--- a/Assignments/EN/Assignment_2.ipynb
+++ b/Assignments/EN/Assignment_2.ipynb
@@ -315,23 +315,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1, 2, 4}"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def intersection2(*arg):\n",
+    "    l1 = arg[0]\n",
+    "    for l2 in arg:\n",
+    "        l1 = set(l1) & set(l2)\n",
+    "    return l1\n",
+    "                \n",
+    "        \n",
+    "\n",
+    "    return \n",
+    "intersection2([2,2,2,1,3,4,5,12], [1,2,4,6], [1,2,3,4])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def intersection2(*arg):\n",
-    "    intersections = []\n",
-    "    \n",
-    "    for list in arg:\n",
-    "        idx = 0\n",
-    "        for value in list:\n",
-    "            if value in [x for x in arg[idx+1:len(arg)+1]]:\n",
-    "                intersection.append(value)\n",
-    "            idx = idx + 1\n",
-    "\n",
-    "    return sorted(intersections)\n",
-    "intersection2([2,2,2,1,3,4,5,12][1,2,4,6])"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -363,7 +379,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def matrix(A, B):\n",
+    "    C = []\n",
+    "    i = 0\n",
+    "    j = 0\n",
+    "\n",
+    "    scalar_product = 0\n",
+    "    for i in range(0,len(A)):\n",
+    "\n",
+    "        for j in range(0:len(A[i])):\n",
+    "            for \n"
+   ]
   }
  ],
  "metadata": {
