--- a/Exercises/EN/Numpy_Pandas/4_Exploring_Data_with_Pandas_Fundamentals.ipynb
+++ b/Exercises/EN/Numpy_Pandas/4_Exploring_Data_with_Pandas_Fundamentals.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,11 +63,137 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method DataFrame.info of                                 rank  revenues  revenue_change  profits  \\\n",
+       "company                                                                   \n",
+       "Walmart                            1    485873             0.8  13643.0   \n",
+       "State Grid                         2    315199            -4.4   9571.3   \n",
+       "Sinopec Group                      3    267518            -9.1   1257.9   \n",
+       "China National Petroleum           4    262573           -12.3   1867.5   \n",
+       "Toyota Motor                       5    254694             7.7  16899.3   \n",
+       "...                              ...       ...             ...      ...   \n",
+       "Teva Pharmaceutical Industries   496     21903            11.5    329.0   \n",
+       "New China Life Insurance         497     21796           -13.3    743.9   \n",
+       "Wm. Morrison Supermarkets        498     21741           -11.3    406.4   \n",
+       "TUI                              499     21655            -5.5   1151.7   \n",
+       "AutoNation                       500     21609             3.6    430.5   \n",
+       "\n",
+       "                                assets  profit_change                  ceo  \\\n",
+       "company                                                                      \n",
+       "Walmart                         198825           -7.2  C. Douglas McMillon   \n",
+       "State Grid                      489838           -6.2              Kou Wei   \n",
+       "Sinopec Group                   310726          -65.0            Wang Yupu   \n",
+       "China National Petroleum        585619          -73.7        Zhang Jianhua   \n",
+       "Toyota Motor                    437575          -12.3          Akio Toyoda   \n",
+       "...                                ...            ...                  ...   \n",
+       "Teva Pharmaceutical Industries   92890          -79.3    Yitzhak Peterburg   \n",
+       "New China Life Insurance        100609          -45.6             Wan Feng   \n",
+       "Wm. Morrison Supermarkets        11630           20.4       David T. Potts   \n",
+       "TUI                              16247          195.5    Friedrich Joussen   \n",
+       "AutoNation                       10060           -2.7   Michael J. Jackson   \n",
+       "\n",
+       "                                                       industry  \\\n",
+       "company                                                           \n",
+       "Walmart                                   General Merchandisers   \n",
+       "State Grid                                            Utilities   \n",
+       "Sinopec Group                                Petroleum Refining   \n",
+       "China National Petroleum                     Petroleum Refining   \n",
+       "Toyota Motor                           Motor Vehicles and Parts   \n",
+       "...                                                         ...   \n",
+       "Teva Pharmaceutical Industries                  Pharmaceuticals   \n",
+       "New China Life Insurance        Insurance: Life, Health (stock)   \n",
+       "Wm. Morrison Supermarkets                  Food and Drug Stores   \n",
+       "TUI                                             Travel Services   \n",
+       "AutoNation                                  Specialty Retailers   \n",
+       "\n",
+       "                                                sector  previous_rank  \\\n",
+       "company                                                                 \n",
+       "Walmart                                      Retailing              1   \n",
+       "State Grid                                      Energy              2   \n",
+       "Sinopec Group                                   Energy              4   \n",
+       "China National Petroleum                        Energy              3   \n",
+       "Toyota Motor                    Motor Vehicles & Parts              8   \n",
+       "...                                                ...            ...   \n",
+       "Teva Pharmaceutical Industries             Health Care              0   \n",
+       "New China Life Insurance                    Financials            427   \n",
+       "Wm. Morrison Supermarkets           Food & Drug Stores            437   \n",
+       "TUI                                  Business Services            467   \n",
+       "AutoNation                                   Retailing              0   \n",
+       "\n",
+       "                                country           hq_location  \\\n",
+       "company                                                         \n",
+       "Walmart                             USA       Bentonville, AR   \n",
+       "State Grid                        China        Beijing, China   \n",
+       "Sinopec Group                     China        Beijing, China   \n",
+       "China National Petroleum          China        Beijing, China   \n",
+       "Toyota Motor                      Japan         Toyota, Japan   \n",
+       "...                                 ...                   ...   \n",
+       "Teva Pharmaceutical Industries   Israel  Petach Tikva, Israel   \n",
+       "New China Life Insurance          China        Beijing, China   \n",
+       "Wm. Morrison Supermarkets       Britain     Bradford, Britain   \n",
+       "TUI                             Germany      Hanover, Germany   \n",
+       "AutoNation                          USA   Fort Lauderdale, FL   \n",
+       "\n",
+       "                                                     website  \\\n",
+       "company                                                        \n",
+       "Walmart                               http://www.walmart.com   \n",
+       "State Grid                            http://www.sgcc.com.cn   \n",
+       "Sinopec Group                         http://www.sinopec.com   \n",
+       "China National Petroleum              http://www.cnpc.com.cn   \n",
+       "Toyota Motor                    http://www.toyota-global.com   \n",
+       "...                                                      ...   \n",
+       "Teva Pharmaceutical Industries      http://www.tevapharm.com   \n",
+       "New China Life Insurance         http://www.newchinalife.com   \n",
+       "Wm. Morrison Supermarkets           http://www.morrisons.com   \n",
+       "TUI                                  http://www.tuigroup.com   \n",
+       "AutoNation                         http://www.autonation.com   \n",
+       "\n",
+       "                                years_on_global_500_list  employees  \\\n",
+       "company                                                               \n",
+       "Walmart                                               23    2300000   \n",
+       "State Grid                                            17     926067   \n",
+       "Sinopec Group                                         19     713288   \n",
+       "China National Petroleum                              17    1512048   \n",
+       "Toyota Motor                                          23     364445   \n",
+       "...                                                  ...        ...   \n",
+       "Teva Pharmaceutical Industries                         1      56960   \n",
+       "New China Life Insurance                               2      54378   \n",
+       "Wm. Morrison Supermarkets                             13      77210   \n",
+       "TUI                                                   23      66779   \n",
+       "AutoNation                                            12      26000   \n",
+       "\n",
+       "                                total_stockholder_equity  \n",
+       "company                                                   \n",
+       "Walmart                                            77798  \n",
+       "State Grid                                        209456  \n",
+       "Sinopec Group                                     106523  \n",
+       "China National Petroleum                          301893  \n",
+       "Toyota Motor                                      157210  \n",
+       "...                                                  ...  \n",
+       "Teva Pharmaceutical Industries                     33337  \n",
+       "New China Life Insurance                            8507  \n",
+       "Wm. Morrison Supermarkets                           5111  \n",
+       "TUI                                                 3006  \n",
+       "AutoNation                                          2310  \n",
+       "\n",
+       "[500 rows x 16 columns]>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Start your code here:\n"
+    "# Start your code here:\n",
+    "f500_head = f500.head()\n",
+    "#print(f500_head)\n",
+    "f500.info"
    ]
   },
   {
@@ -728,7 +854,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
